--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.4/client",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
@@ -45,5 +46,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
