feat: Update project name and branding
Updates the project name in `package.json` and `metadata.json` from "Sprint Review 1 Hub" to "Grupo 2" to reflect the current project phase.

Introduces the Orbitron font for a more distinct display style and adds a custom cursor for enhanced user experience. Also, updates the available icons in `SprintHub.tsx` to be more descriptive of sprint content and adds text stroke utility for stylistic emphasis.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=JetBrains+Mono:wght@400;700&family=Orbitron:wght@900&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
         background-color: #020617; /* slate-950 */
         color: #f8fafc; /* slate-50 */
         overflow-x: hidden;
+        cursor: none; /* Hide default cursor */
+      }
+      a, button, [role="button"] {
+        cursor: none; /* Ensure pointer doesn't show on interactables */
       }
       .font-mono {
         font-family: 'JetBrains Mono', monospace;
+      }
+      .font-display {
+        font-family: 'Orbitron', sans-serif;
       }
       /* Hide scrollbar for Chrome, Safari and Opera */
       .no-scrollbar::-webkit-scrollbar {
@@ -26,6 +33,15 @@
       .no-scrollbar {
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
+      }
+      
+      /* Outline Text Utility */
+      .text-stroke {
+        -webkit-text-stroke: 1px rgba(255, 255, 255, 0.3);
+        color: transparent;
+      }
+      .text-stroke-emerald {
+        -webkit-text-stroke: 1px rgba(52, 211, 153, 0.5);
       }
     </style>
   <script type="importmap">
