--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sprint Review 1 | Inteli x ASIS</title>
+    <title>Project Nexus G02 | Inteli x ASIS</title>
     
     <!-- Custom Favicon: Nexus Node (Emerald Hexagon with Core) -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%2310b981' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolygon points='12 2 22 8.5 22 15.5 12 22 2 15.5 2 8.5 12 2'/%3E%3Ccircle cx='12' cy='12' r='3' fill='%2310b981'/%3E%3C/svg%3E" />
